--- a/InvenTree/locale/cs/LC_MESSAGES/django.po
+++ b/InvenTree/locale/cs/LC_MESSAGES/django.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-20 12:53+0000\n"
-"PO-Revision-Date: 2023-04-19 18:26\n"
+"POT-Creation-Date: 2023-04-20 12:41+0000\n"
+"PO-Revision-Date: 2023-04-20 18:33\n"
 "Last-Translator: \n"
 "Language-Team: Czech\n"
 "Language: cs_CZ\n"
@@ -1994,15 +1994,15 @@ msgstr ""
 
 #: common/models.py:966
 msgid "Default Currency"
-msgstr ""
+msgstr "Výchozí měna"
 
 #: common/models.py:967
 msgid "Select base currency for pricing caluclations"
-msgstr ""
+msgstr "Vyberte základní měnu pro cenové kalkulace"
 
 #: common/models.py:974
 msgid "Download from URL"
-msgstr ""
+msgstr "Stáhnout z URL"
 
 #: common/models.py:975
 msgid "Allow download of remote images and files from external URL"
@@ -2214,46 +2214,46 @@ msgstr ""
 
 #: common/models.py:1178 part/admin.py:53 part/models.py:1001
 msgid "Purchaseable"
-msgstr ""
+msgstr "Možné zakoupit"
 
 #: common/models.py:1179
 msgid "Parts are purchaseable by default"
-msgstr ""
+msgstr "Díly jsou zakoupitelné ve výchozím nastavení"
 
 #: common/models.py:1185 part/admin.py:54 part/models.py:1006
 #: templates/js/translated/table_filters.js:619
 msgid "Salable"
-msgstr ""
+msgstr "Prodejné"
 
 #: common/models.py:1186
 msgid "Parts are salable by default"
-msgstr ""
+msgstr "Díly jsou prodejné ve výchozím nastavení"
 
 #: common/models.py:1192 part/admin.py:56 part/models.py:996
 #: templates/js/translated/table_filters.js:113
 #: templates/js/translated/table_filters.js:189
 #: templates/js/translated/table_filters.js:635
 msgid "Trackable"
-msgstr ""
+msgstr "Sledovatelné"
 
 #: common/models.py:1193
 msgid "Parts are trackable by default"
-msgstr ""
+msgstr "Díly jsou sledovatelné ve výchozím nastavení"
 
 #: common/models.py:1199 part/admin.py:57 part/models.py:1016
 #: part/templates/part/part_base.html:156
 #: templates/js/translated/table_filters.js:109
 #: templates/js/translated/table_filters.js:639
 msgid "Virtual"
-msgstr ""
+msgstr "Nehmotné (virtuální)"
 
 #: common/models.py:1200
 msgid "Parts are virtual by default"
-msgstr ""
+msgstr "Díly jsou nehmotné (virtuální) ve výchozím nastavení"
 
 #: common/models.py:1206
 msgid "Show Import in Views"
-msgstr ""
+msgstr "Zobrazit Import v zobrazeních"
 
 #: common/models.py:1207
 msgid "Display the import wizard in some part views"
@@ -2261,63 +2261,63 @@ msgstr ""
 
 #: common/models.py:1213
 msgid "Show related parts"
-msgstr ""
+msgstr "Zobrazit související díly"
 
 #: common/models.py:1214
 msgid "Display related parts for a part"
-msgstr ""
+msgstr "Zobrazit související díly pro díl"
 
 #: common/models.py:1220
 msgid "Initial Stock Data"
-msgstr ""
+msgstr "Počáteční údaje zásob"
 
 #: common/models.py:1221
 msgid "Allow creation of initial stock when adding a new part"
-msgstr ""
+msgstr "Povolit vytvoření počátečního skladu při přidání nové části"
 
 #: common/models.py:1227 templates/js/translated/part.js:74
 msgid "Initial Supplier Data"
-msgstr ""
+msgstr "Počáteční údaje dodavatele"
 
 #: common/models.py:1228
 msgid "Allow creation of initial supplier data when adding a new part"
-msgstr ""
+msgstr "Povolit vytvoření počátečních dat dodavatele při přidávání nového dílu"
 
 #: common/models.py:1234
 msgid "Part Name Display Format"
-msgstr ""
+msgstr "Formát zobrazení jména dílu"
 
 #: common/models.py:1235
 msgid "Format to display the part name"
-msgstr ""
+msgstr "Formát pro zobrazení názvu dílu"
 
 #: common/models.py:1242
 msgid "Part Category Default Icon"
-msgstr ""
+msgstr "Výchozí ikona kategorie dílu"
 
 #: common/models.py:1243
 msgid "Part category default icon (empty means no icon)"
-msgstr ""
+msgstr "Výchozí ikona kategorie dílu (prázdné znamená bez ikony)"
 
 #: common/models.py:1248
 msgid "Minimum Pricing Decimal Places"
-msgstr ""
+msgstr "Minimální počet desetinných míst u cen"
 
 #: common/models.py:1249
 msgid "Minimum number of decimal places to display when rendering pricing data"
-msgstr ""
+msgstr "Minimální počet desetinných míst k zobrazení u cenových údajů"
 
 #: common/models.py:1259
 msgid "Maximum Pricing Decimal Places"
-msgstr ""
+msgstr "Maximální počet desetinných míst u cen"
 
 #: common/models.py:1260
 msgid "Maximum number of decimal places to display when rendering pricing data"
-msgstr ""
+msgstr "Maximální počet desetinných míst k zobrazení u cenových údajů"
 
 #: common/models.py:1270
 msgid "Use Supplier Pricing"
-msgstr ""
+msgstr "Použít ceny dodavatele"
 
 #: common/models.py:1271
 msgid "Include supplier price breaks in overall pricing calculations"
@@ -2325,7 +2325,7 @@ msgstr ""
 
 #: common/models.py:1277
 msgid "Purchase History Override"
-msgstr ""
+msgstr "Přepsání historie nákupu"
 
 #: common/models.py:1278
 msgid "Historical purchase order pricing overrides supplier price breaks"
@@ -2421,27 +2421,27 @@ msgstr ""
 
 #: common/models.py:1372
 msgid "Page Size"
-msgstr ""
+msgstr "Velikost stránky"
 
 #: common/models.py:1373
 msgid "Default page size for PDF reports"
-msgstr ""
+msgstr "Výchozí velikost stránky pro PDF reporty"
 
 #: common/models.py:1383
 msgid "Enable Test Reports"
-msgstr ""
+msgstr "Povolit testovací reporty"
 
 #: common/models.py:1384
 msgid "Enable generation of test reports"
-msgstr ""
+msgstr "Povolit generování zkušebních reportů"
 
 #: common/models.py:1390
 msgid "Attach Test Reports"
-msgstr ""
+msgstr "Připojit testovací reporty"
 
 #: common/models.py:1391
 msgid "When printing a Test Report, attach a copy of the Test Report to the associated Stock Item"
-msgstr ""
+msgstr "Při tisku testovacího reportu, připojte kopii reportu k přidružené skladové položce"
 
 #: common/models.py:1397
 msgid "Globally Unique Serials"
@@ -2449,23 +2449,23 @@ msgstr ""
 
 #: common/models.py:1398
 msgid "Serial numbers for stock items must be globally unique"
-msgstr ""
+msgstr "Sériová čísla pro skladové položky musí být globálně unikátní"
 
 #: common/models.py:1404
 msgid "Autofill Serial Numbers"
-msgstr ""
+msgstr "Automaticky vyplnit sériová čísla"
 
 #: common/models.py:1405
 msgid "Autofill serial numbers in forms"
-msgstr ""
+msgstr "Automaticky vyplnit sériová čísla ve formulářích"
 
 #: common/models.py:1411
 msgid "Delete Depleted Stock"
-msgstr ""
+msgstr "Odstranit vyčerpané zásoby"
 
 #: common/models.py:1412
 msgid "Determines default behaviour when a stock item is depleted"
-msgstr ""
+msgstr "Určuje výchozí chování, když je vyčerpána skladová položka"
 
 #: common/models.py:1418
 msgid "Batch Code Template"
@@ -10448,16 +10448,12 @@ msgid "Create Part Category"
 msgstr ""
 
 #: templates/js/translated/part.js:299
-#, fuzzy
-#| msgid "Create new manufacturer part"
 msgid "Create new category after this one"
-msgstr "Vytvořit nového výrobce dílu"
+msgstr ""
 
 #: templates/js/translated/part.js:300
-#, fuzzy
-#| msgid "Stock item created"
 msgid "Part category created"
-msgstr "Položka zásob vytvořena"
+msgstr ""
 
 #: templates/js/translated/part.js:314
 msgid "Edit Part Category"
@@ -11331,10 +11327,8 @@ msgid "Create another location after this one"
 msgstr ""
 
 #: templates/js/translated/stock.js:164
-#, fuzzy
-#| msgid "Stock item created"
 msgid "Stock location created"
-msgstr "Položka zásob vytvořena"
+msgstr ""
 
 #: templates/js/translated/stock.js:178
 msgid "Are you sure you want to delete this stock location?"
@@ -12148,8 +12142,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12328,3 +12321,4 @@ msgstr "Oprávnění k úpravě položek"
 #: users/models.py:245
 msgid "Permission to delete items"
 msgstr "Oprávnění k odstranění položek"
+
