--- a/InvenTree/locale/vi/LC_MESSAGES/django.po
+++ b/InvenTree/locale/vi/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-22 13:48+0000\n"
-"PO-Revision-Date: 2023-04-22 18:49\n"
+"PO-Revision-Date: 2023-04-24 18:58\n"
 "Last-Translator: \n"
 "Language-Team: Vietnamese\n"
 "Language: vi_VN\n"
@@ -27,11 +27,11 @@ msgstr "Người dùng không được phân quyền xem mẫu này"
 
 #: InvenTree/exceptions.py:94
 msgid "Error details can be found in the admin panel"
-msgstr ""
+msgstr "Chi tiết lỗi có thể được tìm thấy trong bảng quản trị"
 
 #: InvenTree/fields.py:127
 msgid "Enter date"
-msgstr ""
+msgstr "Nhập ngày"
 
 #: InvenTree/fields.py:204 InvenTree/models.py:743 build/serializers.py:392
 #: build/templates/build/sidebar.html:21 company/models.py:552
@@ -59,11 +59,11 @@ msgstr "Ghi chú"
 #: InvenTree/format.py:152
 #, python-brace-format
 msgid "Value '{name}' does not appear in pattern format"
-msgstr ""
+msgstr "Giá trị '{name}' không xuất hiện ở định dạng mẫu"
 
 #: InvenTree/format.py:162
 msgid "Provided value does not match required pattern: "
-msgstr ""
+msgstr "Giá trị được cung cấp không khớp với mẫu bắt buộc: "
 
 #: InvenTree/forms.py:145
 msgid "Enter password"
@@ -95,64 +95,64 @@ msgstr "Xác nhận địa chỉ email"
 
 #: InvenTree/forms.py:204
 msgid "You must type the same email each time."
-msgstr ""
+msgstr "Bạn phải nhập cùng một email mỗi lần."
 
 #: InvenTree/forms.py:230 InvenTree/forms.py:236
 msgid "The provided primary email address is not valid."
-msgstr ""
+msgstr "Địa chỉ email chính đã cung cấp không hợp lệ."
 
 #: InvenTree/forms.py:242
 msgid "The provided email domain is not approved."
-msgstr ""
+msgstr "Miền email được cung cấp không được phê duyệt."
 
 #: InvenTree/helpers.py:168
 msgid "Connection error"
-msgstr ""
+msgstr "Lỗi kết nối"
 
 #: InvenTree/helpers.py:172 InvenTree/helpers.py:177
 msgid "Server responded with invalid status code"
-msgstr ""
+msgstr "Máy chủ phản hồi với mã trạng thái không hợp lệ"
 
 #: InvenTree/helpers.py:174
 msgid "Exception occurred"
-msgstr ""
+msgstr "Xảy ra Exception"
 
 #: InvenTree/helpers.py:182
 msgid "Server responded with invalid Content-Length value"
-msgstr ""
+msgstr "Máy chủ đã phản hồi với giá trị Content-Length không hợp lệ"
 
 #: InvenTree/helpers.py:185
 msgid "Image size is too large"
-msgstr ""
+msgstr "Hình ảnh quá lớn"
 
 #: InvenTree/helpers.py:197
 msgid "Image download exceeded maximum size"
-msgstr ""
+msgstr "Tải xuống hình ảnh vượt quá kích thước tối đa"
 
 #: InvenTree/helpers.py:202
 msgid "Remote server returned empty response"
-msgstr ""
+msgstr "Máy chủ trả về phản hồi trống"
 
 #: InvenTree/helpers.py:210
 msgid "Supplied URL is not a valid image file"
-msgstr ""
+msgstr "URL được cung cấp không phải là tệp hình ảnh hợp lệ"
 
 #: InvenTree/helpers.py:602 order/models.py:411 order/models.py:572
 msgid "Invalid quantity provided"
-msgstr ""
+msgstr "Số lượng cung cấp không hợp lệ"
 
 #: InvenTree/helpers.py:610
 msgid "Empty serial number string"
-msgstr ""
+msgstr "Chuỗi số sê-ri trống"
 
 #: InvenTree/helpers.py:640
 msgid "Duplicate serial"
-msgstr ""
+msgstr "Trùng lặp sê-ri"
 
 #: InvenTree/helpers.py:673 InvenTree/helpers.py:708
 #, python-brace-format
 msgid "Invalid group range: {g}"
-msgstr ""
+msgstr "Phạm vi nhóm không hợp lệ: {g}"
 
 #: InvenTree/helpers.py:702
 #, python-brace-format
