--- a/InvenTree/locale/hu/LC_MESSAGES/django.po
+++ b/InvenTree/locale/hu/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-27 12:58+0000\n"
-"PO-Revision-Date: 2023-04-26 19:59\n"
+"PO-Revision-Date: 2023-04-27 20:10\n"
 "Last-Translator: \n"
 "Language-Team: Hungarian\n"
 "Language: hu_HU\n"
@@ -1306,8 +1306,7 @@ msgstr "Hiányos foglalás elfogadása"
 
 #: build/serializers.py:388
 msgid "Complete outputs if stock has not been fully allocated"
-msgstr ""
-"Kimenetek befejezése akkor is ha a készlet nem\n"
+msgstr "Kimenetek befejezése akkor is ha a készlet nem\n"
 "lett teljesen lefoglalva"
 
 #: build/serializers.py:457
@@ -10710,10 +10709,8 @@ msgid "Category is required"
 msgstr "Kategória megadása kötelező"
 
 #: templates/js/translated/part.js:2234
-#, fuzzy
-#| msgid "No sales orders found"
 msgid "No subcategories found"
-msgstr "Nem található vevői rendelés"
+msgstr ""
 
 #: templates/js/translated/part.js:2270 templates/js/translated/stock.js:2499
 msgid "Display as tree"
@@ -12171,8 +12168,7 @@ msgstr "Tovább"
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr "A %(provider_name)s felhasználói fiókodat fogod használni a %(site_name)s belépéshez.<br>Kérlek töltsd ki az alábbi adatokat:"
 
@@ -12351,3 +12347,4 @@ msgstr "Jogosultság tételek szerkesztéséhez"
 #: users/models.py:245
 msgid "Permission to delete items"
 msgstr "Jogosultság tételek törléséhez"
+
