--- a/InvenTree/locale/it/LC_MESSAGES/django.po
+++ b/InvenTree/locale/it/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-27 12:58+0000\n"
-"PO-Revision-Date: 2023-04-26 19:59\n"
+"PO-Revision-Date: 2023-04-27 20:10\n"
 "Last-Translator: \n"
 "Language-Team: Italian\n"
 "Language: it_IT\n"
@@ -10708,10 +10708,8 @@ msgid "Category is required"
 msgstr "Carica Sotto Categorie"
 
 #: templates/js/translated/part.js:2234
-#, fuzzy
-#| msgid "No sales orders found"
 msgid "No subcategories found"
-msgstr "Non sono state trovati ordini di vendita"
+msgstr ""
 
 #: templates/js/translated/part.js:2270 templates/js/translated/stock.js:2499
 msgid "Display as tree"
@@ -12169,11 +12167,9 @@ msgstr "Continua"
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
-msgstr ""
-"Stai per utilizzare il tuo account %(provider_name)s per accedere a\n"
+msgstr "Stai per utilizzare il tuo account %(provider_name)s per accedere a\n"
 "%(site_name)s.<br>Per concludere, compila il seguente modulo:"
 
 #: templates/stats.html:13
@@ -12351,3 +12347,4 @@ msgstr "Permessi per modificare gli elementi"
 #: users/models.py:245
 msgid "Permission to delete items"
 msgstr "Autorizzazione ad eliminare gli elementi"
+
