--- a/InvenTree/locale/cs/LC_MESSAGES/django.po
+++ b/InvenTree/locale/cs/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-02 10:05+0000\n"
-"PO-Revision-Date: 2023-05-01 10:45\n"
+"PO-Revision-Date: 2023-05-02 11:22\n"
 "Last-Translator: \n"
 "Language-Team: Czech\n"
 "Language: cs_CZ\n"
@@ -298,7 +298,7 @@ msgstr "Chyba při přejmenování souboru"
 
 #: InvenTree/models.py:581
 msgid "Duplicate names cannot exist under the same parent"
-msgstr ""
+msgstr "Duplicitní názvy nemohou existovat pod stejným nadřazeným názvem"
 
 #: InvenTree/models.py:600
 msgid "Invalid choice"
@@ -370,7 +370,7 @@ msgstr "Cesta"
 
 #: InvenTree/models.py:744
 msgid "Markdown notes (optional)"
-msgstr ""
+msgstr "Poznámky (volitelné)"
 
 #: InvenTree/models.py:771
 msgid "Barcode Data"
@@ -378,7 +378,7 @@ msgstr "Data čárového kódu"
 
 #: InvenTree/models.py:772
 msgid "Third party barcode data"
-msgstr ""
+msgstr "Data čárového kódu třetí strany"
 
 #: InvenTree/models.py:777
 msgid "Barcode Hash"
@@ -627,7 +627,7 @@ msgstr "Vráceno"
 
 #: InvenTree/status_codes.py:182 InvenTree/status_codes.py:395
 msgid "In Progress"
-msgstr ""
+msgstr "Zpracovává se"
 
 #: InvenTree/status_codes.py:183 order/models.py:1323
 #: templates/js/translated/sales_order.js:1440
@@ -694,15 +694,15 @@ msgstr "Umístění změněno"
 
 #: InvenTree/status_codes.py:320
 msgid "Installed into assembly"
-msgstr ""
+msgstr "Nainstalováno do sestavy"
 
 #: InvenTree/status_codes.py:321
 msgid "Removed from assembly"
-msgstr ""
+msgstr "Odstraněno ze sestavy"
 
 #: InvenTree/status_codes.py:323
 msgid "Installed component item"
-msgstr ""
+msgstr "Instalovaná položka komponenty"
 
 #: InvenTree/status_codes.py:324
 msgid "Removed component item"
@@ -714,15 +714,15 @@ msgstr "Rozdělit od nadřazené položky"
 
 #: InvenTree/status_codes.py:327
 msgid "Split child item"
-msgstr ""
+msgstr "Rozdělit podřazený předmět"
 
 #: InvenTree/status_codes.py:329 templates/js/translated/stock.js:2222
 msgid "Merged stock items"
-msgstr ""
+msgstr "Sloučené položky zásob"
 
 #: InvenTree/status_codes.py:331
 msgid "Converted to variant"
-msgstr ""
+msgstr "Převedeno na variantu"
 
 #: InvenTree/status_codes.py:333 templates/js/translated/table_filters.js:317
 msgid "Sent to customer"
@@ -730,31 +730,31 @@ msgstr "Odesláno zákazníkovi"
 
 #: InvenTree/status_codes.py:334
 msgid "Returned from customer"
-msgstr ""
+msgstr "Vráceno od zákazníka"
 
 #: InvenTree/status_codes.py:336
 msgid "Build order output created"
-msgstr ""
+msgstr "Výstup objednávky byl vytvořen"
 
 #: InvenTree/status_codes.py:337
 msgid "Build order output completed"
-msgstr ""
+msgstr "Výstup objednávky sestavení dokončen"
 
 #: InvenTree/status_codes.py:338
 msgid "Consumed by build order"
-msgstr ""
+msgstr "Spotřebováno podle objednávky"
 
 #: InvenTree/status_codes.py:340
 msgid "Shipped against Sales Order"
-msgstr ""
+msgstr "Odesláno v souladu se zákaznickou objednávkou"
 
 #: InvenTree/status_codes.py:342
 msgid "Received against Purchase Order"
-msgstr ""
+msgstr "Přijato proti objednávce"
 
 #: InvenTree/status_codes.py:344
 msgid "Returned against Return Order"
-msgstr ""
+msgstr "Vráceno proti vratce"
 
 #: InvenTree/status_codes.py:358
 msgid "Production"
@@ -786,15 +786,15 @@ msgstr "Neplatný kód měny"
 
 #: InvenTree/validators.py:87 InvenTree/validators.py:103
 msgid "Overage value must not be negative"
-msgstr ""
+msgstr "Přidaná hodnota nesmí být záporná"
 
 #: InvenTree/validators.py:105
 msgid "Overage must not exceed 100%"
-msgstr ""
+msgstr "Nesmí přesáhnout 100%"
 
 #: InvenTree/validators.py:112
 msgid "Invalid value for overage"
-msgstr ""
+msgstr "Neplatná hodnota překročení"
 
 #: InvenTree/views.py:409 templates/InvenTree/settings/user.html:22
 msgid "Edit User Information"
@@ -822,7 +822,7 @@ msgstr "O InvenTree"
 
 #: build/api.py:221
 msgid "Build must be cancelled before it can be deleted"
-msgstr ""
+msgstr "Sestavení musí být zrušeno před odstraněním"
 
 #: build/models.py:68 build/templates/build/build_base.html:9
 #: build/templates/build/build_base.html:27
@@ -846,11 +846,11 @@ msgstr "Vytvořené objednávky"
 
 #: build/models.py:110
 msgid "Invalid choice for parent build"
-msgstr ""
+msgstr "Neplatná volba nadřazeného sestavení"
 
 #: build/models.py:154
 msgid "Build Order Reference"
-msgstr ""
+msgstr "Referenční číslo objednávky"
 
 #: build/models.py:155 order/models.py:355 order/models.py:762
 #: order/models.py:1084 order/models.py:1699 part/admin.py:278
@@ -866,16 +866,16 @@ msgstr ""
 #: templates/js/translated/return_order.js:693
 #: templates/js/translated/sales_order.js:1732
 msgid "Reference"
-msgstr ""
+msgstr "Reference"
 
 #: build/models.py:166
 msgid "Brief description of the build (optional)"
-msgstr ""
+msgstr "Stručný popis sestavení (nepovinné)"
 
 #: build/models.py:174 build/templates/build/build_base.html:189
 #: build/templates/build/detail.html:87
 msgid "Parent Build"
-msgstr ""
+msgstr "Nadřazená sestava"
 
 #: build/models.py:175
 msgid "BuildOrder to which this build is allocated"
@@ -933,37 +933,37 @@ msgstr "Díl"
 
 #: build/models.py:188
 msgid "Select part to build"
-msgstr ""
+msgstr "Vyber téma, které chceš stavět"
 
 #: build/models.py:193
 msgid "Sales Order Reference"
-msgstr ""
+msgstr "Referenční číslo prodejní objednávky"
 
 #: build/models.py:197
 msgid "SalesOrder to which this build is allocated"
-msgstr ""
+msgstr "Prodejní příkaz, kterému je tato verze přidělena"
 
 #: build/models.py:202 build/serializers.py:828
 #: templates/js/translated/build.js:2203
 #: templates/js/translated/sales_order.js:1104
 msgid "Source Location"
-msgstr ""
+msgstr "Umístění lokace"
 
 #: build/models.py:206
 msgid "Select location to take stock from for this build (leave blank to take from any stock location)"
-msgstr ""
+msgstr "Vyberte lokaci, ze které chcete provést inventuru pro sestavu. (nechte prázdné, chcete-li provést inventuru z libovolné lokace)"
 
 #: build/models.py:211
 msgid "Destination Location"
-msgstr ""
+msgstr "Cílová lokace"
 
 #: build/models.py:215
 msgid "Select location where the completed items will be stored"
-msgstr ""
+msgstr "Vyberte lokaci, kde budou dokončené položky uloženy"
 
 #: build/models.py:219
 msgid "Build Quantity"
-msgstr ""
+msgstr "Množství sestav"
 
 #: build/models.py:222
 msgid "Number of stock items to build"
@@ -3727,10 +3727,8 @@ msgstr "Odstranit společnost"
 #: report/templates/report/inventree_so_report_base.html:40
 #: report/templates/report/inventree_test_report_base.html:84
 #: report/templates/report/inventree_test_report_base.html:163
-#, fuzzy
-#| msgid "Delete image"
 msgid "Part image"
-msgstr "Smazat obrázek"
+msgstr ""
 
 #: company/templates/company/company_base.html:56
 #: part/templates/part/part_thumb.html:12
@@ -6803,7 +6801,7 @@ msgstr ""
 #: part/templates/part/part_sidebar.html:30
 #: templates/InvenTree/settings/sidebar.html:37
 msgid "Pricing"
-msgstr ""
+msgstr "Ceník"
 
 #: part/templates/part/part_sidebar.html:44
 msgid "Scheduling"
@@ -8081,10 +8079,8 @@ msgstr ""
 
 #: stock/templates/stock/item_base.html:497
 #: templates/js/translated/stock.js:1728
-#, fuzzy
-#| msgid "Edited stock item"
 msgid "stock item"
-msgstr "Položka zásob upravena"
+msgstr ""
 
 #: stock/templates/stock/item_base.html:522
 msgid "Edit Stock Status"
@@ -8367,7 +8363,7 @@ msgstr ""
 #: templates/InvenTree/settings/sidebar.html:17
 #: templates/InvenTree/settings/sidebar.html:35 templates/notifications.html:5
 msgid "Notifications"
-msgstr ""
+msgstr "Oznámení"
 
 #: templates/InvenTree/notifications/notifications.html:38
 msgid "No unread notifications found"
@@ -8760,15 +8756,15 @@ msgstr ""
 
 #: templates/InvenTree/settings/sidebar.html:9
 msgid "Account"
-msgstr ""
+msgstr "Účet"
 
 #: templates/InvenTree/settings/sidebar.html:11
 msgid "Display"
-msgstr ""
+msgstr "Zobrazení"
 
 #: templates/InvenTree/settings/sidebar.html:13
 msgid "Home Page"
-msgstr ""
+msgstr "Domovská stránka"
 
 #: templates/InvenTree/settings/sidebar.html:15
 #: templates/js/translated/tables.js:563 templates/navbar.html:107
@@ -9099,10 +9095,8 @@ msgid "copy version information"
 msgstr ""
 
 #: templates/account/base.html:66 templates/navbar.html:17
-#, fuzzy
-#| msgid "About InvenTree"
 msgid "InvenTree logo"
-msgstr "O InvenTree"
+msgstr ""
 
 #: templates/account/email_confirm.html:6
 #: templates/account/email_confirm.html:9
@@ -10358,10 +10352,8 @@ msgid "Export to PDF"
 msgstr ""
 
 #: templates/js/translated/label.js:102
-#, fuzzy
-#| msgid "Rejected"
 msgid "selected"
-msgstr "Odmítnuto"
+msgstr ""
 
 #: templates/js/translated/label.js:110 templates/js/translated/label.js:127
 msgid "Select Label Template"
@@ -10750,10 +10742,8 @@ msgid "No parts found"
 msgstr ""
 
 #: templates/js/translated/part.js:1839
-#, fuzzy
-#| msgid "Order parts"
 msgid "parts"
-msgstr "Objednávka dílů"
+msgstr ""
 
 #: templates/js/translated/part.js:1917
 msgid "No category"
@@ -11657,10 +11647,8 @@ msgid "No stock location set"
 msgstr ""
 
 #: templates/js/translated/stock.js:1729
-#, fuzzy
-#| msgid "Edited stock item"
 msgid "stock items"
-msgstr "Položka zásob upravena"
+msgstr ""
 
 #: templates/js/translated/stock.js:1833
 msgid "Stock item is in production"
@@ -12254,8 +12242,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12434,3 +12421,4 @@ msgstr "Oprávnění k úpravě položek"
 #: users/models.py:245
 msgid "Permission to delete items"
 msgstr "Oprávnění k odstranění položek"
+
